# ConanBug

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
patches/: patch1.patch
src/: hello.cpp  hello.h
